--- a/thapa-codefest/package.json
+++ b/thapa-codefest/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "framer-motion": "^7.3.5",
     "react": "^18.2.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
